--- a/Demo Apps/Music Player/Music/Base.lproj/Main_iPad.storyboard
+++ b/Demo Apps/Music Player/Music/Base.lproj/Main_iPad.storyboard
@@ -57,7 +57,7 @@
                                         <rect key="frame" x="64" y="300" width="896" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="36"/>
-                                        <color key="textColor" white="1" alpha="0.5" colorSpace="calibratedWhite"/>
+                                        <color key="textColor" white="1" alpha="0.75" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eVg-ef-86N" userLabel="Rewind">
@@ -129,7 +129,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.75" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.80000000000000004" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="Q6i-7L-26s" firstAttribute="leading" secondItem="6HQ-ql-rs8" secondAttribute="leading" constant="64" id="2in-oj-7dB"/>
                                     <constraint firstItem="33D-rP-WSE" firstAttribute="baseline" secondItem="Gok-zF-SLt" secondAttribute="baseline" id="5Xy-Mz-2JH"/>
