--- a/Demo Apps/App Store Search/AppStoreSearch/Base.lproj/Main.storyboard
+++ b/Demo Apps/App Store Search/AppStoreSearch/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5023" systemVersion="13A3017" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="rS3-R9-Ivy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5037" systemVersion="13C32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="rS3-R9-Ivy">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -136,6 +136,7 @@
                                     <view contentMode="scaleToFill" id="8Qn-vj-eFa" userLabel="Star Rating" customClass="MTZStarsRatingView">
                                         <rect key="frame" x="118" y="102" width="120" height="12"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                        <color key="tintColor" red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="bFM-4a-166" userLabel="Download" customClass="MTZOutlinedButton">
                                         <rect key="frame" x="253" y="88" width="57" height="26"/>
@@ -158,6 +159,7 @@
                                             <segment title="Reviews"/>
                                             <segment title="Related"/>
                                         </segments>
+                                        <color key="tintColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
                                     </segmentedControl>
                                     <view contentMode="scaleToFill" id="uho-4x-23A" userLabel="Screenshots View" customClass="MTZScrollingCardsView">
                                         <rect key="frame" x="0.0" y="164" width="320" height="366"/>
